--- a/lyx/model.lyx
+++ b/lyx/model.lyx
@@ -6263,7 +6263,8 @@ inflows
 \begin_inset Formula $q$
 \end_inset
 
- in East North Central in year 2000, the population grows by 0.5%.
+ in East North Central in year 2000, the population grows by 0.5% on average,
+ in all ensuing years.
  The number of people coming into the region increases by 5% on average,
  split by 2.3% coming to buy and 4.3% in order to rent.
  
